Refactor: test: day7/StreamUtils.java @;Nested annotations, test partitioning